What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 4.0
-----------

* Building pyobjc-core using "python setup.py develop" will use 'ccache'
  when available.

* Building pyobjc-core will compile the source files from new to old files,
  to speed up feedback while working on the source code.

* Legacy BridgeSupport files on macOS 10.13 (which aren't used by default
  by PyObjC) can contain junk data in typestring data. Cleanup that data
  before using it.

* Deal with loading bundle variables of a C string type, that used to crash
  to do an oddity of locating that information.

* Using wrappers for C structs as sequences is deprecated, this
  feature was introduced a long while ago when the framework wrappers
  were very incomplete and is no longer usefull.

* Add ``objc.options.structs_indexable``. When this option is True
  (the default) wrappers for C structs behave as before, when the
  option is False these wrappers can no longer be used as writable
  tuples, that is all "sequence" methods will raise ``TypeError``.

* Add ``objc.options.structs_writable``. When this option is True
  (the default) wrappers for C structs behave as before, when the
  option is False these wrappers can no longer be modified.

* Add availability macro ``MAC_OS_X_VERSION_10_13`` to ``objc``.

* New framework wrappers:

  - ColorSync (new in macOS 10.13)
  - CoreML (new in macOS 10.13)			(beta 3) (beta 4) (beta 5)
  - ExternalAccessory (new in macOS 10.13)
  - CoreSpotlight (new in macOS 10.13)
  - Vision (new in macOS 10.13)			(beta 3)          (beta 5) (beta 6)

* metadata updates (beta 6):

  - PhotosUI
  - Accounts				 (beta 4)
  - AddressBook
  - AppKit			(beta 3) (beta 4) (beta 5)
  - ApplicationServices				  (beta 5)
  - Automator			(beta 3) (beta 4)
  - AVKit			(beta 3)	  (beta 5)
  - CalendarStore			 (beta 4)
  - CFNetwork
  - CloudKit			(beta 3)
  - Contacts			(beta 3)	  (beta 5)
  - CoreBluetooth		(beta 3)